# supra-view

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
app/: app_controller.cpp  app_controller.h  main.cpp  v2_app_controller.cpp  v2_app_controller.h  window.cpp  window.h
core/capture/: capture_types.h  capture_utils.cpp  capture_utils.h  desktop_capture.cpp  desktop_capture.h
core/input/: input_mapper.cpp  input_mapper.h  input_state.cpp  input_state.h
core/renderer/: d3d_context.cpp  d3d_context.h  renderer_types.h  texture_pipeline.cpp  texture_pipeline.h  window_renderer.cpp  window_renderer.h  workspace_downsample_pass.cpp  workspace_downsample_pass.h  workspace_downsample_pass_test.cpp  workspace_placeholder_scene.cpp  workspace_placeholder_scene.h  workspace_placeholder_scene_test.cpp  workspace_renderer.cpp  workspace_renderer.h  workspace_renderer_validation.cpp  workspace_renderer_validation.h  workspace_renderer_validation_test.cpp
core/session/: workspace_session.cpp  workspace_session.h  workspace_state.cpp  workspace_state.h
core/shader/: fullscreen_quad.cpp  fullscreen_quad.h  shader_compiler.cpp  shader_compiler.h  shader_sources.cpp  shader_sources.h  workspace_downsample_shader_contract.cpp  workspace_downsample_shader_contract.h  workspace_downsample_shader_contract_test.cpp  workspace_shader_sources.cpp  workspace_shader_sources.h  workspace_shader_sources_test.cpp
docs/superpowers/plans/: 2026-04-18-supra-view-implementation.md  2026-04-20-supra-view-v2-phase1-implementation.md
docs/superpowers/specs/: 2026-04-18-supra-view-design.md  2026-04-20-supra-view-v2-design.md
scripts/: build.bat  build.ps1  run.bat  run.ps1
